--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,21 @@
     <link rel="stylesheet" href="/app.css" />
   </head>
   <body>
-      <a href="/yellow"><div style="background-color:yellow;">yellow</div>
-      <a href="/green"><div style="background-color:green;">green</div>
-      <a href="/red"><div style="background-color:red;">red</div>
-      <a href="/orange"><div style="background-color:orange;">orange</div>
-      <a href="/blue"><div style="background-color:blue;">blue</div>
-    <footer>
-    </footer>
+    <wrap>
+      <header>
+        <h1>Playing with Flatiron and Ecstatic</h1>
+      </header>
+      <content>
+        <a href="/yellow"><div style="background-color:yellow;">yellow</div>
+        <a href="/green"><div style="background-color:green;">green</div>
+        <a href="/red"><div style="background-color:red;">red</div>
+        <a href="/orange"><div style="background-color:orange;">orange</div>
+        <a href="/blue"><div style="background-color:blue;">blue</div>
+      </content>
+      <footer>
+        <a href = "http://flatironjs.com">Flatiron</a>
+      </footer>
+      <wrap>
   </body>
 </html>
 
