--- a/public/layout.html
+++ b/public/layout.html
@@ -4,20 +4,21 @@
     <link rel="stylesheet" href="/app.css" />
   </head>
   <body>
-    <wrap>
-      <header>
+    <div id='wrap'>
+      <div id='header'>
         <h1>Playing with Flatiron and Ecstatic</h1>
-      </header>
-      <content>
-        <a href="/yellow"><div style="background-color:yellow;">yellow</div>
-        <a href="/green"><div style="background-color:green;">green</div>
-        <a href="/red"><div style="background-color:red;">red</div>
-        <a href="/orange"><div style="background-color:orange;">orange</div>
-        <a href="/blue"><div style="background-color:blue;">blue</div>
-      </content>
-      <footer>
+      </div>
+      <div id='content'>
+        <a href="/yellow"><div style="background-color:yellow;">yellow</div></a>
+        <a href="/green"><div style="background-color:green;">green</div></a>
+        <a href="/red"><div style="background-color:red;">red</div></a>
+        <a href="/orange"><div style="background-color:orange;">orange</div></a>
+        <a href="/blue"><div style="background-color:blue;">blue</div></a>
+      </div>
+      <div id='footer'>
         <a href = "http://flatironjs.com" target = "_blank">Flatiron</a>
-      </footer>
-      <wrap>
+      </div>
+    </div>
   </body>
 </html>
+
