minor layout changes

--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,13 @@
         <h1>Playing with Flatiron and Ecstatic</h1>
       </div>
       <div id='content'>
-        <a href="/yellow"><div style="background-color:yellow;">yellow</div></a>
-        <a href="/green"><div style="background-color:green;">green</div></a>
-        <a href="/red"><div style="background-color:red;">red</div></a>
-        <a href="/orange"><div style="background-color:orange;">orange</div></a>
-        <a href="/blue"><div style="background-color:blue;">blue</div></a>
+        <a href="/red"><div style="background-color:red;">red</div></a><br />
+        <a href="/orange"><div style="background-color:orange;">orange</div></a><br />
+        <a href="/yellow"><div style="background-color:yellow;">yellow</div></a><br />
+        <a href="/green"><div style="background-color:green;">green</div></a><br />
+        <a href="/blue"><div style="background-color:blue;">blue</div></a><br />
+        <a href="/indigo"><div style="background-color:indigo;">indigo</div></a><br />
+        <a href="/violet"><div style="background-color:violet;">violet</div></a>
       </div>
       <div id='footer'>
         <a href = "http://flatironjs.com" target = "_blank">Flatiron</a>
