--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,11 @@
   <body>
     <div id='wrap'>
       <div id='header'>
-        <h1>Playing with Flatiron and Ecstatic</h1>
+        <h1><a href="/">Playing with Flatiron and Ecstatic</a></h1>
       </div>
       <div id='content'>
+        <h3> Click all the colors of the Rainbow </h3>
+        <a  href="/white"><div class = 'color_link' style="background-color:white;">white</div></a>
         <a  href="/red"><div class = 'color_link' style="background-color:red;">red</div></a>
         <a  href="/orange"><div class = 'color_link' style="background-color:orange;">orange</div></a>
         <a  href="/yellow"><div class = 'color_link' style="background-color:yellow;">yellow</div></a>
@@ -16,9 +18,11 @@
         <a  href="/blue"><div class = 'color_link' style="background-color:blue;">blue</div></a>
         <a  href="/indigo"><div class = 'color_link' style="background-color:indigo;">indigo</div></a>
         <a  href="/violet"><div class = 'color_link' style="background-color:violet;">violet</div></a>
+        <a  href="/black"><div class = 'color_link' style="background-color:black;">black</div></a>
       </div>
       <div id='footer'>
         <a href = "http://flatironjs.com" target = "_blank">Flatiron</a>
+        <a href = "https://github.com/jesusabdullah/node-ecstatic" target = "_blank">Ecstatic</a>
       </div>
     </div>
   </body>
