--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Flatiron Test</title>
+    <link rel="shortcut icon" type="application/ico" href="/favicon.ico" / > 
     <link rel="stylesheet" href="/app.css" />
   </head>
   <body>
@@ -27,4 +28,3 @@
     </div>
   </body>
 </html>
-
