--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,12 @@
         <a  href="/black"><div class = 'color_link' style="background-color:black;">black</div></a>
       </div>
       <div id='footer'>
-        <a href = "http://flatironjs.com" target = "_blank">Flatiron</a>
-        <a href = "https://github.com/jesusabdullah/node-ecstatic" target = "_blank">Ecstatic</a>
+        <div id = 'left'>
+          <a href ="http://krwindham.jit.su"><img src = '/images/nan.png' /></a>
+        <div id = 'right' >
+          <a href = "http://flatironjs.com" target = "_blank">Flatiron</a>
+          <a href = "https://github.com/jesusabdullah/node-ecstatic" target = "_blank">Ecstatic</a>
+        </div>
       </div>
     </div>
   </body>
